# tcp-udp-stack

./: CMakeLists.txt  PLAN.md
.claude/: settings.local.json
src/: CMakeLists.txt
src/app/: CMakeLists.txt  phase1.cpp  phase2.cpp
src/common/: Buffer.h  Checksum.h  Endian.h
src/core/: CMakeLists.txt  Demuxer.h  EventLoop.cpp  EventLoop.h  INetworkLayer.h  INetworkProtocol.h  Stack.cpp  Stack.h
src/link/: CMakeLists.txt  ILinkLayer.h  TunDevice.cpp  TunDevice.h
src/net/: CMakeLists.txt  Icmp.h  IcmpLayer.cpp  IcmpLayer.h  Ipv4Header.h  Ipv4Layer.cpp  Ipv4Layer.h
tests/: CMakeLists.txt
tests/common/: BufferTest.cpp  CMakeLists.txt  ChecksumTest.cpp
